<resources>
    <string name="app_name">EcoContributor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">EcoContributor</string>
    <string name="nav_header_subtitle">Citizen Science For All</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Main Menu</string>

    <string name="menu_home">Home</string>
    <string name="menu_login">Login</string>
    <string name="menu_search">Search Projects</string>
    <string name="menu_resources">Resources</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>