<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/sharp_family_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/sharp_login_24"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/sharp_search_24"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_resources"
            android:icon="@drawable/sharp_info_24"
            android:title="@string/menu_resources" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/sharp_logout_24"
            android:title="@string/menu_logout" />
    </group>
</menu>