<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.ecocontributor.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.ecocontributor.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <activity
        android:id="@+id/nav_search"
        android:name="com.example.ecocontributor.ui.search.SearchActivity"
        android:label="@string/menu_search"
        tools:layout="@layout/activity_search" />

    <fragment
        android:id="@+id/nav_resources"
        android:name="com.example.ecocontributor.ui.resources.ResourcesFragment"
        android:label="@string/menu_resources"
        tools:layout="@layout/fragment_resources" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.ecocontributor.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>